docsite/src/theme/DocItem/Layout/styles.module.css
.docItemCol {
  /* margin: 0 auto; */
  /* max-width: 75ch; */
  width: 100%;
  padding: 0;
}

.docItemContainer {
  padding: 0 var(--ifm-spacing-horizontal);
}

.headerContainer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

.copyButton {
  /* No margin needed here anymore */
}

@media (min-width: 997px) {
  .docItemCol {
    padding: 0;
  }

  .docItemContainer {
    padding: 1rem;
    border-radius: 0.5rem;
    background-color: var(--ifm-background-surface-color);
    border: 1px solid var(--ifm-color-emphasis-200);
  }
}

